<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="isLoading"
            type="boolean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_light_background"
        android:orientation="vertical"
        tools:ignore="PrivateResource">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:visibleGone="@{isLoading}">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/loading_projects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/wait_authorization" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginEnd="@dimen/horizontal_margin"
                android:text="@string/address_crm"
                android:textColor="@android:color/black"
                android:textSize="@dimen/authorization_text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/domain_crm_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginEnd="@dimen/horizontal_margin"
                android:hint="@string/domain_crm_hint"
                android:importantForAutofill="no"
                android:inputType="textWebEmailAddress"
                android:text="@string/default_domain" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginEnd="@dimen/horizontal_margin"
                android:text="@string/input_login"
                android:textColor="@android:color/black"
                android:textSize="@dimen/authorization_text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/login_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginEnd="@dimen/horizontal_margin"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textWebEmailAddress"
                android:text="@string/default_login" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_marginEnd="@dimen/horizontal_margin"
                android:text="@string/input_password"
                android:textColor="@android:color/black"
                android:textSize="@dimen/authorization_text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginEnd="@dimen/horizontal_margin"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:text="@string/default_password" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                android:background="@color/colorPrimaryDark"
                android:paddingStart="@dimen/horizontal_padding"
                android:paddingEnd="@dimen/horizontal_padding"
                android:text="@string/enter"
                android:textColor="@android:color/white" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/error_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/error_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginEnd="@dimen/horizontal_margin" />

            <Button
                android:id="@+id/try_again_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin_error"
                android:background="@color/colorPrimaryDark"
                android:paddingStart="@dimen/horizontal_padding"
                android:paddingEnd="@dimen/horizontal_padding"
                android:text="@string/try_again"
                android:textColor="@android:color/white"
                android:textSize="@dimen/error_button_text_size" />

        </LinearLayout>


    </LinearLayout>
</layout>